# ihacpa-v2

./: .env.example  .env.template  .gitignore  AI_FEATURES.md  API_REFERENCE.md  CHANGELOG.md  Copy of 2025-07-23-updated v0.9.xlsx  ENHANCED_COLUMNS_SUMMARY.md  FINAL_CONFIRMATION.md  FINAL_STATUS.md  FIXES_SUMMARY.md  IHACPA_Results_Summary.md  IMPROVEMENT_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SUCCESS_CONFIRMATION.md  TECHNICAL_UPDATES_2025-07-27.md  TEST_SUMMARY_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  analyze_enhanced_output.py  analyze_excel_structure.py  compare_excel_files.py  debug_column_processors.py  debug_conversion_issue.py  debug_mitre_data.py  debug_mitre_html_detailed.py  debug_sandbox_registration.py  debug_scan_filtering.py  demo.py  demo_enhanced_columns.py  demo_excel_output.py  docker-compose.yml  examine_excel.py  examine_structure.py  find_packages.py  monitor_logs.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+30 more)
config/: settings.yaml
config/global/: settings.yaml
data/backups/: 2025-07-09 IHACPA Review of ALL existing PYTHON Packages - org_backup_20250725_162127.xlsx
docs/: TECHNICAL_UPDATES.md
docs/getting-started/: azure-setup.md  quickstart.md
old_files/src/: output.xlsx  output2.xlsx
old_files/src/data/output/: changes_report_20250709_165006.txt  changes_report_20250709_165104.txt  changes_report_20250709_165118.txt  changes_report_20250709_165712.txt  changes_report_20250709_170543.txt  changes_report_20250709_170658.txt  changes_report_20250709_170945.txt  changes_report_20250709_171611.txt  changes_report_20250709_171905.txt  changes_report_20250709_172347.txt  changes_report_20250709_172627.txt  changes_report_20250709_174517.txt  changes_report_20250709_174622.txt  changes_report_20250709_175022.txt  changes_report_20250709_182801.txt  changes_report_20250709_183433.txt  changes_report_20250709_183911.txt  changes_report_20250709_184549.txt  changes_report_20250709_184825.txt  changes_report_20250709_190526.txt  changes_report_20250709_193655.txt  changes_report_20250709_200055.txt  changes_report_20250710_091813.txt  changes_report_20250710_112331.txt  changes_report_20250710_120611.txt  changes_report_20250710_122045.txt  changes_report_20250710_141840.txt  changes_report_20250710_145809.txt  changes_report_20250710_154909.txt  changes_report_20250710_155717.txt  changes_report_20250710_162339.txt  changes_report_20250710_170443.txt  changes_report_20250710_174819.txt  changes_report_20250710_174916.txt  (+70 more)
scripts/setup/: setup_azure_env.py
src/: main.py
src/ai_layer/agents/: __init__.py  correlation_analyzer.py  risk_assessor.py  version_matcher.py
src/automation/: __init__.py  playwright_manager.py  scraper_factory.py  web_scraper.py
src/cli/: __init__.py  parser.py
src/config/: __init__.py  color_config.py  config_manager.py
src/core/: ai_analyzer.py  app_controller.py  base_scanner.py  browser_automation.py  error_handler.py  logger_manager.py  mock_sandbox_manager.py  progress_tracker.py  sandbox_manager.py
src/integrations/: __init__.py  column_processors.py  enhanced_column_orchestrator.py  pypi_client.py
src/integrations/columns/: __init__.py
src/io/: __init__.py  excel_handler.py  report_generator.py
src/sandboxes/exploit_db/: __init__.py  models.py  scanner.py
src/sandboxes/github_advisory/: __init__.py  models.py  scanner.py
src/sandboxes/mitre/: __init__.py  models.py  scanner.py
src/sandboxes/nvd/: scanner.py
src/sandboxes/pypi/: scanner.py
src/sandboxes/snyk/: __init__.py  models.py  scanner.py
src/services/: enhanced_excel_processor.py
src/utils/: __init__.py  enhanced_version_utils.py  version_utils.py  vulnerability_filter.py
testcases/: README.md  examine_excel.py  test_ai_enabled.py  test_azure_integration.py  test_excel_packages.py  test_real_packages.py
testcases/data/: README.md
testcases/integration/: __init__.py
testcases/performance/: __init__.py
testcases/unit/: __init__.py
tests/integration/: test_full_pipeline.py
tests/unit/test_sandboxes/: test_pypi_sandbox.py
(+17 files in other folders)
